# CommandFramework

./: CMakeLists.txt  CommandFramework.sln
CommandFramework/: BasicCommand.h  CMakeLists.txt  Exception.cpp  Exception.h  ICommand.h  Source.cpp  UndoCommand.cpp  UndoCommand.h  UndoRedoCommand.cpp  UndoRedoCommand.h  UndoRedoOperation.vcxproj  UndoRedoOperation.vcxproj.filters
CommandFramework/include/: BasicCommand.h  Exception.h  ICommand.h  IOperation.h  UndoCommand.h  UndoOperation.h  UndoRedoCommand.h  UndoRedoOperation.h
CommandFramework/src/: Exception.cpp  UndoCommand.cpp  UndoOperation.cpp  UndoRedoCommand.cpp  UndoRedoOperation.cpp
Signal/: CMakeLists.txt
Signal/include/: Signal.h
